RESOLVED FIXED270148
WebsiteDataStore::setTrackingPreventionEnabled should not resolve directories
https://bugs.webkit.org/show_bug.cgi?id=270148
Summary WebsiteDataStore::setTrackingPreventionEnabled should not resolve directories
Sihui Liu
Reported 2024-02-26 21:43:19 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-26 21:44:10 PST
Sihui Liu
Comment 2 2024-02-26 21:51:25 PST
EWS
Comment 3 2024-02-27 13:49:37 PST
Committed 275404@main (15365541a813): <https://commits.webkit.org/275404@main> Reviewed commits have been landed. Closing PR #25154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.