WebsiteDataStore::setTrackingPreventionEnabled should not resolve directories https://bugs.webkit.org/show_bug.cgi?id=270148 rdar://123669767

Reviewed by Brent Fulgham.

When investigating a performance issue, I noticed WebsiteDataStore::setTrackingPreventionEnabled spent a long time on
file operations. It turns out setTrackingPreventionEnabled tries to resolve directories, which is unnecessary for this
operation -- it does not need directory information at all.

* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::setTrackingPreventionEnabled):

Canonical link: https://commits.webkit.org/275404@main